🔧 Fix: Resolve 3 critical UX issues
ISSUE 1 ✅ HOME - Product Range Responsive
- Added md:grid-2 breakpoint for smoother tablet transition
- Fixed co cụm problem on 853px-1280px range
- Maintains design consistency with minimal changes

ISSUE 2 ✅ PRODUCT - Compare Table Redesign
- Updated table headers to FrameX brand colors (orange gradient)
- Enhanced featured column with brand-consistent styling
- Added subtle shadows and improved visual hierarchy
- Professional appearance maintained

ISSUE 3 ✅ CONTACT - Form Content Update
- Synced product names with Products page (STARTER/SMART/PREMIUM)
- Updated pricing format consistency (VND currency)
- Fixed naming inconsistencies across pages

All fixes follow MINIMAL CHANGES principle - bugs fixed without design alterations.

--- a/contact.html
+++ b/contact.html
@@ -174,10 +174,10 @@
                         <label data-lang="form-product">Product Interest</label>
                         <select name="product">
                             <option value="" data-lang="form-select">Select a product</option>
-                            <option value="starter">FrameX Starter (800M - 1.2B)</option>
-                            <option value="family">FrameX Family (1.5B - 2.5B)</option>
-                            <option value="custom">FrameX Custom (3B+)</option>
-                            <option value="pro">FrameX PRO</option>
+                            <option value="starter">FrameX STARTER (800M - 1.2B VND)</option>
+                            <option value="smart">FrameX SMART (1.5B - 2.5B VND)</option>
+                            <option value="premium">FrameX PREMIUM (3B+ VND)</option>
+                            <option value="pro">FrameX PRO (Custom Quote)</option>
                         </select>
                     </div>
                     
