--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     <p class="section-subtitle" data-lang="products-subtitle">Steel structure solutions for every need and budget</p>
                 </div>
                 
-                <div class="grid sm:grid-2 lg:grid-3 gap-8">
+                <div class="grid sm:grid-2 md:grid-2 lg:grid-3 gap-8">
                     <div class="product-card">
                         <div class="product-header">
                             <h3 class="product-title" data-lang="product-1-title">FrameX Starter</h3>
