🎨 Phase 2: CSS cleanup and consolidation
WHAT WAS DONE:
- Removed 4 unused comparison-table CSS files (only 1 was used)
- Consolidated 3 footer CSS files into 1 unified file
- Updated all HTML files to use consolidated CSS
- CSS files: 28 → 22 (21% reduction)

WHY THESE CHANGES:
- comparison-table: Had 5 versions, only 'redesign' was used
- footer: 3 files doing same job, merged for efficiency
- Reduces HTTP requests and complexity

BENEFITS:
- Cleaner CSS organization
- Easier maintenance
- Faster page loads
- No visual changes - tested and working

--- a/blog.html
+++ b/blog.html
@@ -35,10 +35,8 @@
     <meta name="twitter:title" content="Blog | FrameX - Industry Insights & Updates">
     <meta name="twitter:description" content="Latest news and insights on steel construction, smart homes, and sustainable building practices.">
     <meta name="twitter:image" content="https://framex.vn/assets/images/twitter-card.jpg">
-    <link rel="stylesheet" href="css/footer-v2.css">
     <link rel="stylesheet" href="css/surgical-updates.css">
-    <link rel="stylesheet" href="css/footer-white-override.css">
-    <link rel="stylesheet" href="css/footer-fixes.css">
+    <link rel="stylesheet" href="css/footer-unified.css">
     </head>
 <body>
     <!-- Skip to main content for accessibility -->
