--- a/investor-relations.html
+++ b/investor-relations.html
@@ -628,10 +628,8 @@
     <meta name="twitter:title" content="FrameX - Shaping Tomorrow's Living | Smart Prefabricated Steel Structures">
     <meta name="twitter:description" content="FrameX pioneers modern steel construction with smart prefabricated structures. Complete integrated solutions for homeowners and developers.">
     <meta name="twitter:image" content="https://framex.vn/assets/images/twitter-card.jpg">
-    <link rel="stylesheet" href="css/footer-v2.css">
     <link rel="stylesheet" href="css/surgical-updates.css">
-    <link rel="stylesheet" href="css/footer-white-override.css">
-    <link rel="stylesheet" href="css/footer-fixes.css">
+    <link rel="stylesheet" href="css/footer-unified.css">
     </head>
 <body>
     <!-- Skip to main content for accessibility -->
