--- a/about.html
+++ b/about.html
@@ -424,10 +424,8 @@
     <meta name="twitter:title" content="About | FrameX - Pioneering Steel Construction">
     <meta name="twitter:description" content="Learn about FrameX, Vietnam's leading integrated prefabricated steel construction solutions provider.">
     <meta name="twitter:image" content="https://framex.vn/assets/images/twitter-card.jpg">
-    <link rel="stylesheet" href="css/footer-v2.css">
     <link rel="stylesheet" href="css/surgical-updates.css">
-    <link rel="stylesheet" href="css/footer-white-override.css">
-    <link rel="stylesheet" href="css/footer-fixes.css">
+    <link rel="stylesheet" href="css/footer-unified.css">
     </head>
 <body>
     <!-- Skip to main content for accessibility -->
