--- a/contact.html
+++ b/contact.html
@@ -35,10 +35,8 @@
     <meta name="twitter:title" content="Contact | FrameX - Get Your Project Started">
     <meta name="twitter:description" content="Contact FrameX for your steel construction project. Get a quote, schedule consultation, or become a partner.">
     <meta name="twitter:image" content="https://framex.vn/assets/images/twitter-card.jpg">
-    <link rel="stylesheet" href="css/footer-v2.css">
     <link rel="stylesheet" href="css/surgical-updates.css">
-    <link rel="stylesheet" href="css/footer-white-override.css">
-    <link rel="stylesheet" href="css/footer-fixes.css">
+    <link rel="stylesheet" href="css/footer-unified.css">
     </head>
 <body>
     <!-- Skip to main content for accessibility -->
