--- a/index.html
+++ b/index.html
@@ -529,11 +529,9 @@
     <meta name="twitter:image" content="https://framex.vn/assets/images/twitter-card.jpg">
     <link rel="stylesheet" href="css/homepage-updates.css">
     <link rel="stylesheet" href="css/homepage-surgical-updates.css">
-    <link rel="stylesheet" href="css/footer-v2.css">
     <link rel="stylesheet" href="css/service-icons-update.css">
     <link rel="stylesheet" href="css/surgical-updates.css">
-    <link rel="stylesheet" href="css/footer-white-override.css">
-    <link rel="stylesheet" href="css/footer-fixes.css">
+    <link rel="stylesheet" href="css/footer-unified.css">
 </head>
 <body>
     <!-- Skip to main content for accessibility -->
