--- a/products.html
+++ b/products.html
@@ -35,10 +35,8 @@
     <meta name="twitter:title" content="Products | FrameX - Smart Steel Construction Solutions">
     <meta name="twitter:description" content="Explore FrameX product range: Starter, Family, Custom, and PRO steel construction solutions for every need and budget.">
     <meta name="twitter:image" content="https://framex.vn/assets/images/twitter-card.jpg">
-    <link rel="stylesheet" href="css/footer-v2.css">
     <link rel="stylesheet" href="css/surgical-updates.css">
-    <link rel="stylesheet" href="css/footer-white-override.css">
-    <link rel="stylesheet" href="css/footer-fixes.css">
+    <link rel="stylesheet" href="css/footer-unified.css">
                             <link rel="stylesheet" href="css/comparison-table-redesign.css">
     <link rel="stylesheet" href="css/vi-table-refinements.css">
     </head>
