--- a/projects.html
+++ b/projects.html
@@ -35,10 +35,8 @@
     <meta name="twitter:title" content="Projects | FrameX - Portfolio & Case Studies">
     <meta name="twitter:description" content="View our portfolio of completed steel construction projects. From luxury villas to commercial complexes.">
     <meta name="twitter:image" content="https://framex.vn/assets/images/twitter-card.jpg">
-    <link rel="stylesheet" href="css/footer-v2.css">
     <link rel="stylesheet" href="css/surgical-updates.css">
-    <link rel="stylesheet" href="css/footer-white-override.css">
-    <link rel="stylesheet" href="css/footer-fixes.css">
+    <link rel="stylesheet" href="css/footer-unified.css">
     <link rel="stylesheet" href="css/project-filter-pill-style.css">
     </head>
 <body>
