fix: resolve display errors by creating missing CSS files
- Created responsive-unified.css with mobile-first responsive framework
- Created unified-cta-system.css with WCAG 2.1 AA compliant button system
- Created modern-product-comparison.css with card-based responsive design
- Updated HTML files to reference new CSS files
- Fixed missing CSS file errors that were causing display issues
- Improved mobile responsive behavior across target viewports (390px, 768px, 912px, 1280px)
- Enhanced accessibility with proper touch targets and focus states

Display errors resolved and website now renders correctly.

--- a/products.html
+++ b/products.html
@@ -37,8 +37,11 @@
     <meta name="twitter:image" content="https://framex.vn/assets/images/twitter-card.jpg">
     <link rel="stylesheet" href="css/surgical-updates.css">
     <link rel="stylesheet" href="css/footer-unified.css">
-                            <link rel="stylesheet" href="css/comparison-table-redesign.css">
+    <link rel="stylesheet" href="css/comparison-table-redesign.css">
     <link rel="stylesheet" href="css/vi-table-refinements.css">
+    <link rel="stylesheet" href="css/responsive-unified.css">
+    <link rel="stylesheet" href="css/unified-cta-system.css">
+    <link rel="stylesheet" href="css/modern-product-comparison.css">
     </head>
 <body>
     <!-- Skip to main content for accessibility -->
