--- a/about.html
+++ b/about.html
@@ -426,6 +426,8 @@
     <meta name="twitter:image" content="https://framex.vn/assets/images/twitter-card.jpg">
     <link rel="stylesheet" href="css/surgical-updates.css">
     <link rel="stylesheet" href="css/footer-unified.css">
+    <link rel="stylesheet" href="css/responsive-unified.css">
+    <link rel="stylesheet" href="css/unified-cta-system.css">
     </head>
 <body>
     <!-- Skip to main content for accessibility -->
