--- a/index.html
+++ b/index.html
@@ -532,6 +532,8 @@
     <link rel="stylesheet" href="css/service-icons-update.css">
     <link rel="stylesheet" href="css/surgical-updates.css">
     <link rel="stylesheet" href="css/footer-unified.css">
+    <link rel="stylesheet" href="css/responsive-unified.css">
+    <link rel="stylesheet" href="css/unified-cta-system.css">
 </head>
 <body>
     <!-- Skip to main content for accessibility -->
